# omniagent

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  Vagrantfile  code-quality-report.md  config.example.yml  docker-compose.mattermost.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.sqlx/: query-1421a7a74ae0dbd403619dd651119f893b14417ce2bbfe89af3cf8b3ab4d1796.json  query-187ed19b1b63752709a053129343a6490fedf61282612755bdf8fd65e243571f.json  query-1eaeaad91b0ae420a3d59c83c329d33679e9dc9ea6fba7a2c92e45db0e73d6c3.json  query-25691547f08448fbdfd0c0e18ddf35ceed5547b527fb1af2f19b0c1cd89fa614.json  query-335ebb3f68130fd8f6d01bd64e37bda846fdc53bb4d5f4bca4c30569c7ba5871.json  query-3b12f310cbe8d489a3114f6fb4d6726bccaabb2ce52c7c22fbf13450a7e55697.json  query-5295e1821e8ec1c1b1f8893161aa970d7e755810dc376767dce11fc462b616bc.json  query-59d80d9790ea00597fe4d2bb4a04b9baf260bfd218b487e9d7fe48c0c75c55eb.json  query-5c1168db5c834434793c5a028120685dff45a384b9444dba5d8865a9749b7a65.json  query-61a96bdd2d87d395d85784406e380a28a44b787ac626306605016d0a07dab714.json  query-6288be2713718c936b630c3b33c7dbb04d7570b03d6c3863e3ac31b57d1f33d8.json  query-631aac7cbeae743b3c760270f31791614976d919325025b4ee13728195ee8521.json  query-678bf4cff7f05e3b9947725bf0b1f0879503e16608e9f6ff98583ddac3f597da.json  query-6bfd09be9331fdf36dfcb7dfe3cecde5dcb6ddd96a64090535e3f6cd8a61cc98.json  query-6e7adf7a85253c0e823ce8eb29f3633346028fa9d90a0f978af9eb6205fa2879.json  query-91badd2b23fc54d924f7b057657cd5f58a5cd1f015d6969ac8db933027487c02.json  (+9 more)
backup/: Dockerfile
(+123 files in other folders)
